<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
        >
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/agricolaSubItemLabel"
            android:id="@+id/carcassonneSubMonkSpaceButton"/>
        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:id="@+id/carcassonneMonkValue"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/carcassonneSubMonkSpaceButton"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/agricolaAddItemLabel"
            android:id="@+id/carcassonneAddMonkSpaceButton"
            android:layout_toEndOf="@+id/carcassonneMonkValue"/>
        <TextView
            android:id="@+id/agricolaMonkSpacesResourceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carcassonneMonkSpacesName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/carcassonneAddMonkSpaceButton"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_centerVertical="true"
            android:id="@+id/carcassonneMonkScore"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/carcassonneSubmitMonkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/carcassonneMonkSubmitButtonLabel"/>

    </LinearLayout>

</LinearLayout>